--- a/build.xml
+++ b/build.xml
@@ -44,6 +44,7 @@
              basedir = "${javac.dest}" 
             includes = "**/*.class"/>
     </target>
+	<change-settings>
 
 
     <target name="war"
